[gd_scene load_steps=15 format=3 uid="uid://dsqnkao5geyne"]

[ext_resource type="Script" uid="uid://b8fs881nrd4t4" path="res://Scripts/laser.gd" id="1_mou6w"]
[ext_resource type="Shader" uid="uid://dcf8xtmughgev" path="res://Assets/Shaders/laser.gdshader" id="1_r1bh0"]
[ext_resource type="AudioStream" uid="uid://b16thwy4mxc0" path="res://Assets/SFX/Player_Laser_Hit_01.wav" id="3_3pc01"]
[ext_resource type="AudioStream" uid="uid://7s3kxekgdr5k" path="res://Assets/SFX/Player_Laser_Fire_01.wav" id="4_cnw57"]
[ext_resource type="AudioStream" uid="uid://bx45jf2it1ls2" path="res://Assets/SFX/Player_Laser_Fire_02.wav" id="5_y5j7k"]
[ext_resource type="AudioStream" uid="uid://bjv8h75irb6f" path="res://Assets/SFX/Player_Laser_Fire_03.wav" id="6_r1vd4"]
[ext_resource type="AudioStream" uid="uid://c4erbgyecm7qx" path="res://Assets/SFX/Player_Laser_Fire_04.wav" id="7_0l8kr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r1bh0"]
resource_local_to_scene = true
shader = ExtResource("1_r1bh0")
shader_parameter/beams = 1
shader_parameter/energy = 3.0
shader_parameter/roughness = 3
shader_parameter/frequency = 10
shader_parameter/speed = 1.0
shader_parameter/thickness = 0.036
shader_parameter/outline_thickness = 0.068
shader_parameter/beam_difference = 0.0
shader_parameter/glow = 0.0
shader_parameter/outline_glow = 0.0
shader_parameter/color = Color(0.909804, 1, 1, 1)
shader_parameter/outline_color = Color(1, 0, 0.0784314, 1)
shader_parameter/progress = 1.0
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.05
shader_parameter/noise_scale = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_3pc01"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserTexture:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LaserTexture:material:shader_parameter/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.909804, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LaserTexture:material:shader_parameter/outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0.0784314, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LaserTexture:material:shader_parameter/outline_thickness")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.068]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LaserTexture:material:shader_parameter/thickness")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.036]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LaserTexture:material:shader_parameter/speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_mou6w"]
resource_name = "fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LaserTexture:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.233333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [false],
"method": &"set_laser_dangerous"
}]
}

[sub_resource type="Animation" id="Animation_cnw57"]
resource_name = "telegraph_red"
length = 1.5
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LaserTexture:material:shader_parameter/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.909804, 1, 1, 0.282353), Color(0.909804, 1, 1, 0.694118), Color(0.909804, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LaserTexture:material:shader_parameter/outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 0, 0.0784314, 0.219608), Color(1, 0, 0.0784314, 0.678431), Color(1, 0, 0.0784314, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LaserTexture:material:shader_parameter/outline_thickness")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.1, 0.054, 0.068]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LaserTexture:material:shader_parameter/thickness")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 0.036]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LaserTexture:material:shader_parameter/speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.0, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LaserTexture:material:shader_parameter/progress")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_y5j7k"]
resource_name = "telegraph_blue"
length = 1.5
step = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LaserTexture:material:shader_parameter/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.909804, 1, 1, 0.282353), Color(0.909804, 1, 1, 0.694118), Color(0.909804, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LaserTexture:material:shader_parameter/outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.113725, 0.54902, 1, 0.219608), Color(0.113725, 0.54902, 1, 0.678431), Color(0.113725, 0.54902, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("LaserTexture:material:shader_parameter/outline_thickness")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.1, 0.054, 0.068]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LaserTexture:material:shader_parameter/thickness")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 0.036]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("LaserTexture:material:shader_parameter/speed")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0.0, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("LaserTexture:material:shader_parameter/progress")
tracks/6/interp = 2
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c8ure"]
_data = {
&"RESET": SubResource("Animation_3pc01"),
&"fade": SubResource("Animation_mou6w"),
&"telegraph_blue": SubResource("Animation_y5j7k"),
&"telegraph_red": SubResource("Animation_cnw57")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_cnw57"]
streams_count = 4
stream_0/stream = ExtResource("4_cnw57")
stream_1/stream = ExtResource("5_y5j7k")
stream_2/stream = ExtResource("6_r1vd4")
stream_3/stream = ExtResource("7_0l8kr")

[node name="Laser" type="RayCast2D" groups=["laser"]]
script = ExtResource("1_mou6w")
can_hit_own_team = true

[node name="LaserTexture" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_r1bh0")
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
pivot_offset = Vector2(0, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c8ure")
}
autoplay = "fade"

[node name="DespawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 2.0
one_shot = true
autostart = true

[node name="SFX" type="Node2D" parent="."]

[node name="LaserFire" type="AudioStreamPlayer2D" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_cnw57")
volume_db = -5.0
bus = &"SFX"

[node name="LaserHit" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("3_3pc01")
volume_db = -5.0
bus = &"SFX"

[node name="RespawnTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="TelegraphTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="TelegraphTimer" to="." method="_on_telegraph_timer_timeout"]
